# cwas

./: .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  doperm.py  doperm.pyx  environment.yml  getBinomtest.py  oryx-build-commands.txt  pycatego_vep_cwas.pyx  pyproject.toml  requirements.txt  run_burdenShift.R  run_vep.py  setup.py  vep_pycatego.py
.github/workflows/: ci.yml  python-package-conda.yml
conf/: annotation.yaml  categories.yaml  category_filter.yaml  category_group.yaml  download_filepaths.yaml  download_fileurls.yaml  filepaths.yaml  fileurls.yaml  prepare_filepaths.yaml  redundant_categories.txt  vep_custom.yaml  vep_custom_annotations.yaml
cwas/: __main__.py  annotation.py  argmanager.py  argparser.py  binom_test.py  binomial_test.py  burden_shift.py  burden_test.py  categorization.py  cli.py  concat_zscore.py  configuration.py  correlation.py  dawn.py  effective_num_test.py  env.py  errcheck.py  executable.py  extract_variant.py  factory.py  fastafile.py  fisher_exact_test.py  log.py  multiprocessing.py  permut_test.py  permutation_test.py  preparation.py  risk_score.py  runnable.py  simulation.py  start.py
cwas/config/: categories.yaml  redundant_categories.yaml
cwas/core/: common.py
cwas/utils/: check.py  cmd.py  core.py  error.py  log.py
data/: SuppTable01_Sample_information.xlsx
docs/: conf.py  index.rst  requirements.txt
docs/config/: configuration.rst
docs/dataset/: functional_annotations.rst  functional_scores.rst  genelist.rst  overview_dataset.rst
docs/faq/: faq.rst  tips.rst
docs/install/: installation.rst
scripts/: burden_test.py  categorize.py  concat_zscore.py  cwas_mp.py  download.py  eff_num_test.py
src/: annotate.py  binom_test.pxd  binom_test.pyx  burden_test.py  categorization.pyx  categorize.py  doperm.py  doperm.pyx  download.py  fastafile.py  getBinomtest.py  perm.pyx  permutation.pyx  prepare.py  pycatego_vep_cwas.pyx  risk_score.py  run_binom_test.py  run_perm.py  run_vep.py  simulate.py  utils.py  vep_pycatego.py
tests/: conftest.py  test_annotation.py  test_binomial_test.py  test_categorization.py  test_configuration.py  test_env.py  test_factory.py  test_preparation.py  test_restart.py  test_runnable.py  test_start.py
(+47 files in other folders)
