[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cwas-plus"
version = "0.0.1"
authors = [
  { name="Minwoo Jeong", email="jeongmwj@gmail.com" },
]
description = __doc__
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Linux",
]

[project.urls]
"Homepage" = "https://github.com/joonan-lab/cwas"
"Bug Tracker" = "https://github.com/joonan-lab/cwas/issues"