[tool.poetry]
name = "cwas"
version = "0.1.3"
description = """Category-wide association study (CWAS). This is a data analytic tool to perform stringent association tests to find non-coding loci associated with autism spectrum disorder (ASD)."""
authors = ["Minwoo Jeong <jeongmwj@gmail.com>",
    "Yujin Kim <yujinkim4896@gmail.com>",
    "Koh In Gyeong <kohingyeong@gmail.com>",
    "Jae Hyun Kim <a7420174@gmail.com>"
]
maintainers = [
    "Yujin Kim <yujinkim4896@gmail.com>",
    "Koh In Gyeong <kohingyeong@gmail.com>"
]
license = "MIT"
readme = "README.md"
homepage = "https://cwas-plus.readthedocs.io/en/latest/"
repository = "https://github.com/joonan-lab/cwas"
documentation = "https://cwas-plus.readthedocs.io/en/latest/"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]
packages = [
    { include = "cwas" },
]

[tool.poetry.dependencies]
python = "<3.13,>=3.9"
pandas = "^2.1.0"
numpy = "^1.25.2"
zarr = "^2.16.1"
scipy = "^1.11.2"
tqdm = "^4.66.1"
igraph = "^0.10.8"
matplotlib = "^3.8.0"
rpy2 = "^3.5.14"
seaborn = "^0.12.2"
parmap = "^1.7.0"
polars = "^0.19.2"
scikit-learn = "^1.3.0"
pysam = "^0.21.0"
pytabix = "^0.1"
pyyaml = "^6.0.1"
python-dotenv = "^1.0.0"
pytest = "^7.4.2"
pyarrow = "^13.0.0"
adjusttext = "^0.8"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/joonan-lab/cwas/issues"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cwas = 'cwas.__main__:main'
